# paweu-katas

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Solutions/: Solutions.h
Solutions/CalculatingWithFunctions/: CalculatingWithFunctions.h
Solutions/GeneratePassword/: PasswordKata.h
Solutions/StalinSort/: StalinSort.h
common/: KataFramework.h
lib/: KataFramework.h
